# grounded-rag-sciqa

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
datasets/eval_qa/: local_baseline_v0.jsonl
docs/: Project_Brief_Engineering.docx  Project_Brief_Recruiter.docx  design_grounding_contract.md  evaluation_methodology.md
grounded-rag-sciqa/: .env.example  .gitignore  pyproject.toml
grounded-rag-sciqa/infra/compose/: docker-compose.yml
grounded-rag-sciqa/libs/common/sciqa_common/: utils.py
grounded-rag-sciqa/libs/events/: pyproject.toml
grounded-rag-sciqa/libs/schema/sciqa_schema/: enums.py  transitions.py
grounded-rag-sciqa/services/eval/: Dockerfile  pyproject.toml
grounded-rag-sciqa/services/ingest/app/: main.py
grounded-rag-sciqa/services/query/: Dockerfile  pyproject.toml
grounded-rag-sciqa/services/query/app/: main.py
grounded-rag-sciqa/tests/schema/: test_transitions.py
infra/docker/opensearch/: opensearch.yml
libs/common/: pyproject.toml
libs/events/: pyproject.toml
libs/events/sciqa_events/: __init__.py  types.py
libs/schema/: pyproject.toml
libs/schema/sciqa_schema/: __init__.py  grounding.py  models.py
notebooks/: demo_grounded_qa.ipynb
results/: local_baseline_v0.json
services/eval/: pyproject.toml
services/eval/app/: main.py
services/eval/app/core/: __init__.py  local_baseline.py
services/eval/app/routes/: runs.py
services/ingest/: Dockerfile  pyproject.toml
services/query/: pyproject.toml
tests/query/: test_grounding_verifier.py  test_local_rag.py
tests/schema/: test_models.py
(+12 files in other folders)
